--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "child1"]
 	path = child1
 	url = git@github.com:fys85/testChild.git
+	update = rebase
 [submodule "child2"]
 	path = child2
 	url = git@github.com:fys85/testChild2.git
+	update = rebase
